<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tri_local"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.snowt.omnipucks.TriLocal">

    <TextView
        android:text="@string/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvType" />

    <TextView
        android:text="@string/tvLogiciel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinType"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLogiciel" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinType"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvLogiciel" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinType"
        android:layout_toEndOf="@+id/tvLogiciel"
        android:id="@+id/spinLogiciel" />

    <TextView
        android:text="@string/tvTimeDebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTimeDebut"
        android:layout_alignTop="@+id/etTimeDebut"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinLogiciel"
        android:layout_alignParentEnd="true"
        android:id="@+id/spinJour"
        android:layout_alignStart="@+id/spinLogiciel" />

    <TextView
        android:text="@string/tvJour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvJour"
        android:layout_below="@+id/spinLogiciel"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etTimeDebut"
        android:layout_below="@+id/spinJour"
        android:layout_alignStart="@+id/spinJour" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/etTimeDebut"
        android:layout_alignStart="@+id/etTimeDebut"
        android:id="@+id/etTimeFin" />

    <TextView
        android:text="@string/tvTimeFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTimeFin"
        android:layout_below="@+id/etTimeDebut"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnTri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTri"
        android:layout_alignBottom="@+id/etTimeFin"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/etTimeDebut" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/etTimeFin"
        android:layout_toStartOf="@+id/btnTri"
        android:layout_marginTop="17dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/lvTri" />

</RelativeLayout>
